--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,6 +17,6 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag pcalimache/portfolio:$(date +%s)
     - name: Login to docker hub repo
-      run: docker login --username=pcalimache --password=$DOCKER_HUB_PASSWORD
+      run: docker login --username=pcalimache --password=${{secrets.DOCKER_HUB_PASSWORD}}
     - name: Push Docker image
       run: docker push pcalimache/portfolio:$(date +%s)
