--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,6 +22,8 @@ jobs:
         with:
           username: pcalimache
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+      - name: test
+        run: ls
       -
         name: Build and push
         uses: docker/build-push-action@v5
